--- a/src/_scss/main.scss
+++ b/src/_scss/main.scss
@@ -6,3 +6,17 @@ body {
   background-color: $mainColor;
   font-family: 'Noto Serif', serif;
 }
+
+.myButtons {
+  display: inline-block;
+  text-transform: capitalize;
+  font-weight: 700;
+  padding: 10px;
+  margin: 5px 0px 5px 0px;
+  color: rgb(255, 77, 130);
+  cursor: pointer;
+
+  &:hover {
+    color: black;
+  }
+}
