--- a/src/_scss/libs/_colors.scss
+++ b/src/_scss/libs/_colors.scss
@@ -1,7 +1,10 @@
 // Coleurs
-$mainColor : rgb(212, 212, 212);
+$mainColor : rgb(60, 68, 90);
 
 // Mixes du coleurs
 
 // des composants
-
+$menuColor : rgb(181, 186, 192);
+$utilsColor : rgb(225, 238, 245);
+$boardColor : rgb(251, 254, 255);
+$bottomBar : rgb(31, 34, 46);
