--- a/src/_scss/libs/_bottomBar.scss
+++ b/src/_scss/libs/_bottomBar.scss
@@ -10,9 +10,31 @@
   .bottom-bar {
     font-size: 0.8em;
     margin-top: 5px;
-    margin-left: 10px;
+    // margin-left: 10px;
+
+    .bottombar-items {
+      display: inline-block;
+      margin-left: 40px;
+
+      &:nth-child(1) {
+        margin-left: 10px !important;
+      }
+
+      .bottombar-error {
+        display: inline-block;
+        color: salmon;
+        margin-left: 40px;
+      }
+      .bottombar-utilInfo {
+        display: inline-block;
+      }
+    }
+
+    // .bottombar-tools{
+    //   margin-left: 30px;
+    // }
     span {
-      color: pink;
+      color: rgb(255, 192, 203);
       font-weight: 700;
     }
   }
