--- a/src/_scss/libs/_mainMenu.scss
+++ b/src/_scss/libs/_mainMenu.scss
@@ -1,27 +1,28 @@
 .main-menu {
   position: fixed;
   width: 81px;
-  background-color: $menuColor;
-  border: 1px solid $menuColor;
-  top: 5px;
-  left: 5px;
+  top: 50%;
+  left: -6px;
   display: grid;
   grid-template-columns: 40px 40px;
   box-shadow: 4px 8px 0 rgba(#000, 0.15);
+  grid-gap: 1px;
+  transform: scale(0.85) translateY(-50%);
 
-  border-radius: 3px;
+  border-radius: 4px;
   z-index: 1;
   
   .utils{
-    border-radius: 2px;
     width: 100%;
     height: 40px;
     background-color: $utilsColor;
+    border-radius: 2px;
     cursor: pointer;
 
     &:hover {
       background-color: rgb(245, 255, 255);
     }
+
   }
 
   .square {
