added selected feature

--- a/src/_scss/main.scss
+++ b/src/_scss/main.scss
@@ -21,8 +21,19 @@ body {
         left: 50%;
         top: 50%;
         transform: translate(-50%, -50%)
-        
       }
     }
   }
+}
+
+#hitDraw {
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: -1;
+  opacity: 0;
+}
+
+#draw {
+  cursor: crosshair;
 }
