--- a/src/_scss/libs/_mainMenu.scss
+++ b/src/_scss/libs/_mainMenu.scss
@@ -8,7 +8,7 @@
   box-shadow: 4px 8px 0 rgba(#000, 0.15);
   grid-gap: 1px;
   transform: scale(0.85) translateY(-50%);
-
+  background-color: $menuColor;
   border-radius: 4px;
   z-index: 1;
   
