--- a/src/_scss/libs/_colors.scss
+++ b/src/_scss/libs/_colors.scss
@@ -1,5 +1,6 @@
 // Coleurs
-$mainColor : rgb(60, 68, 90);
+$mainColor : rgb(226, 252, 255);
+$secondaryColor : rgb(255, 104, 93);
 
 // Mixes du coleurs
 
